crates/compiler/src/tests/e2e/good/0216_struct_counter_impl/main.gom
struct Counter {
    count: int32,
}

impl Counter {
    fn new() -> Counter {
        Counter { count: 0 }
    }
    
    fn increment(self: Counter) -> Counter {
        Counter { count: self.count + 1 }
    }
    
    fn get_count(self: Counter) -> int32 {
        self.count
    }
}

fn main() {
    let c = Counter::new();
    let c = c.increment();
    let c = c.increment();
    let c = c.increment();
    println(c.get_count().to_string());
}
