crates/compiler/src/tests/e2e/bad/0024_generic_struct_mismatch/main.gom
struct Counter {
  count: int32,
}

fn main() -> unit {
  let c: Counter[int32] = Counter { count: 0 };
  println(c.count)
}
